--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Healthy Harvest</title>
     <link rel="stylesheet" href="../static/css/index.css">
 </head>
 <body>
@@ -63,7 +63,7 @@
 
     </div>
         <div id="nav2">
-            <a href="#">All</a>
+            <a href="{{url_for('all')}}">All</a>
             <a href="{{url_for('snacks')}}">Snacks</a>
             <a href="{{url_for('fruits')}}">Grocery</a>
             <a href="{{url_for('products')}}">Pharmacy</a>
