--- a/templates/beauty.html
+++ b/templates/beauty.html
@@ -37,10 +37,17 @@
 
 
 
-
+    <div id="abcd">
         <form action="{{ url_for('add_to_cart', product_id=product.id) }}" method="POST">
             <button type="submit" id="but" >Add to Cart</button>
         </form>
+
+        <form action="{{url_for('buy_now' , product_id=product.id) }}" method="POST">
+            <button type="submit" id="but">Buy Now</button>
+        </form>
+
+    </div>
+
     </div>
 
 
